--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </div>
     </header>
     <div id="imageContainer">
-      <img src="/img/dog.jpg" alt="" id="dogImg" />
+      <img src="/Dog-Breeds-Quiz/img/dog.jpg" alt="" id="dogImg" />
     </div>
     <div id="startBtns">
       <a id="practice" class="btn" href="/practice.html">PRACTICE</a>
