--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       <img src="/Dog-Breeds-Quiz/img/dog.jpg" alt="" id="dogImg" />
     </div>
     <div id="startBtns">
-      <a id="practice" class="btn" href="/practice.html">PRACTICE</a>
-      <a id="game" class="btn startBtn" href="/game.html">BEST OUT OF 20</a>
+      <a id="practice" class="btn" href="/Dog-Breeds-Quiz/practice.html">PRACTICE</a>
+      <a id="game" class="btn startBtn" href="/Dog-Breeds-Quiz/game.html">BEST OUT OF 20</a>
     </div>
 
     <script src="dogBreeds.js"></script>
