--- a/practice.html
+++ b/practice.html
@@ -26,7 +26,7 @@
         <button id="ansOp4" class="ansBtn opt"></button>
       </div>
       <div id="practiceBtns">
-        <a class="btn" id="quitBtn" href="/index.html"> Quit practicing </a>
+        <a class="btn" id="quitBtn" href="/Dog-Breeds-Quiz/index.html"> Quit practicing </a>
         <button class="btn hidden" id="nextDogBtnPractice">Next dog</button>
       </div>
     </div>
